@@ -1,7 +1,7 @@
 /***************************************************************
-$Rev::                         $:  Revision der letzten Übertragung
-$Author::                      $:  Autor der letzten Übertragung
-$Date::                        $:  Datum der letzten Übertragung
+$Rev::                              $:  Revision der letzten Übertragung
+$Author::                           $:  Autor der letzten Übertragung
+$Date::                             $:  Datum der letzten Übertragung
 $URL$
 ***** (c) DIAF e.V. *******************************************/
 
@@ -26,8 +26,8 @@ $URL$
 #login {
     background:#f8f7e6;
     position:absolute;
-    top:300px;
-    left:170px;
+    top:100px;
+    left:100px;
     width:180px;
     text-align:center;
     z-index:100;
